# AAT

./: .gitignore  README.md  init.sh
AAT_server_app/: Dockerfile
AAT_server_app/AAT_graphical_wrapper/: AAT_graphical_wrapper.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
AAT_server_app/AAT_server_app/app/views/layouts/: application.html.erb
AAT_server_app/AAT_server_app/config/: application.rb  secrets.yml
AAT_server_app/AAT_server_app/config/initializers/: session_store.rb
AAT_server_app/dyn_lib_aligment_core/: CMakeLists.txt
AAT_server_app/dyn_lib_aligment_core/include/: aat.h
AAT_server_app/dyn_lib_aligment_core/include/aligment_algorithms/: aligment_algorithm.h
AAT_server_app/dyn_lib_aligment_core/include/aligment_structures/: aligment_structure.h  fasta_structure.h
AAT_server_app/dyn_lib_aligment_core/src/: aat.cpp  main.cpp
AAT_server_app/dyn_lib_aligment_core/src/aligment_algorithms/: aligment_algorithm.cpp
AAT_server_app/dyn_lib_aligment_core/src/aligment_structures/: aligment_structure.cpp  fasta_structure.cpp
AAT_server_app/test_aligment_wrapper/: CMakeLists.txt
AAT_server_app/test_aligment_wrapper/src/: main.cpp
AAT_server_app/test_aligment_wrapper/src/unit_tests/: aligment_algorithm_test.cpp
nginx/: Dockerfile
